test/integration/statsFormatter/statsCasesFixture/sass-loader-syntax-error/errors.webpack-4.txt
Error in ./main.scss

  Syntax error:
    color: red;
               ^
        Invalid CSS after "  color: red;": expected "}", was ""
        in Xdir/sass-loader-syntax-error/main.scss (line 2, column 15)